<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="195dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background_image_skillset"
        android:scaleType="fitXY"
        android:foreground="#892d2b2b"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/txt_skill_name"
            android:textStyle="bold"
            android:text="Technology and Science"
            android:gravity="center"
            android:textColor="@color/white"
            />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_bg"
            android:text="100K ITEMS"
            android:id="@+id/btn_skill_select"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

</android.support.v7.widget.CardView>