...
    </string>
    <string name="title_activity_web_page">WebPage</string>
    <string name="app_id">ca-app-pub-3516471139276349~4217472411</string>
    <string name="ad_unit_id">ca-app-pub-3516471139276349/6908458202</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="show_relevant">Show Relevant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

